// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`transform symbol > should work with array 1`] = `
"import { useSignal as _signal$ } from "essor";
const _$a = _signal$([1, 2, 3]);
_$a.value = 2;"
`;

exports[`transform symbol > should work with array 2`] = `
"import { useSignal as _signal$ } from "essor";
const _$a = _signal$([1, {
  a: 1
}, 3, 4]);
_$a.value = 2;"
`;

exports[`transform symbol > should work with array 3`] = `
"import { useSignal as _signal$ } from "essor";
const _$a = _signal$([1, 2, 3, 4, 5]);
_$a.value = 2;"
`;

exports[`transform symbol > should work with basic types 1`] = `
"import { useSignal as _signal$ } from "essor";
const _$a = _signal$(false);
_$a.value = 1;"
`;

exports[`transform symbol > should work with basic types 2`] = `
"import { useSignal as _signal$ } from "essor";
const _$a = _signal$(true);
_$a.value = 1;"
`;

exports[`transform symbol > should work with basic types 3`] = `
"import { useSignal as _signal$ } from "essor";
const _$a = _signal$(0);
_$a.value = 1;"
`;

exports[`transform symbol > should work with basic types 4`] = `
"import { useSignal as _signal$ } from "essor";
const _$a = _signal$(1);
_$a.value = 1;"
`;

exports[`transform symbol > should work with basic types 5`] = `
"import { useSignal as _signal$ } from "essor";
const _$a = _signal$(1);
_$a.value = 1;"
`;

exports[`transform symbol > should work with basic types 6`] = `
"import { useSignal as _signal$ } from "essor";
const _$a = _signal$(123);
_$a.value = 1;"
`;

exports[`transform symbol > should work with basic types 7`] = `
"import { useSignal as _signal$ } from "essor";
const _$a = _signal$(null);
_$a.value = 1;"
`;

exports[`transform symbol > should work with basic types 8`] = `
"import { useSignal as _signal$ } from "essor";
const _$a = _signal$(undefined);
_$a.value = 1;"
`;

exports[`transform symbol > should work with basic types 9`] = `
"import { useSignal as _signal$ } from "essor";
const _$a = _signal$(NaN);
_$a.value = 1;"
`;

exports[`transform symbol > should work with const function transform computed 1`] = `
"import { useSignal as _signal$, useComputed as _computed$ } from "essor";
const _$a = _computed$(() => 1);
_$a.value = 2;"
`;

exports[`transform symbol > should work with const function transform computed 2`] = `
"import { useSignal as _signal$, useComputed as _computed$ } from "essor";
const _$a = _computed$(a => a + 1);
_$a.value = 2;"
`;

exports[`transform symbol > should work with import value 1`] = `
"import { useSignal as _signal$, useComputed as _computed$ } from "essor";
import { $a as _$a } from 'a';
import { b } from 'b';
console.log(_$a.value, b);"
`;

exports[`transform symbol > should work with let function transform computed 1`] = `
"import { useSignal as _signal$, useComputed as _computed$ } from "essor";
let _$a = _signal$(() => 1);
_$a.value = 2;"
`;

exports[`transform symbol > should work with let function transform computed 2`] = `
"import { useSignal as _signal$, useComputed as _computed$ } from "essor";
let _$a = _signal$(a => a + 1);
_$a.value = 2;"
`;

exports[`transform symbol > should work with object 1`] = `
"import { useSignal as _signal$ } from "essor";
const _$a = _signal$({
  a: 1
});
_$a.value = 2;"
`;

exports[`transform symbol > should work with object 2`] = `
"import { useSignal as _signal$ } from "essor";
const _$a = _signal$({
  a: 1,
  b: 2
});
_$a.value = 2;"
`;

exports[`transform symbol > should work with object 3`] = `
"import { useSignal as _signal$ } from "essor";
const _$a = _signal$({
  a: 1,
  b: {
    c: 1
  }
});
_$a.value = 2;"
`;

exports[`transform symbol > should work with object pattern 1`] = `
"import { useSignal as _signal$, useComputed as _computed$ } from "essor";
const {
  $a: _$a,
  b
} = {
  $a: 1,
  b: 2
};
const [_$c, d] = [1, 2];
const [{
  $d: _$d,
  e
}] = [{
  $d: 1,
  e: 2
}];
console.log(_$a.value, b);
console.log(_$c.value, d);
console.log(_$d.value, e);"
`;

exports[`transform symbol > should work with object pattern alias 1`] = `
"import { useSignal as _signal$, useComputed as _computed$ } from "essor";
const {
  a: _$a,
  b
} = {
  a: 1,
  b: 2
};
const [{
  d: _$d
}] = [{
  d: 1,
  e: 2
}];
console.log(_$a.value, b);
console.log(_$d.value);"
`;
